# Qubit-Simulator

./: CMakeLists.txt  README.md
src/: CNOTGate.cpp  CNOTGate.h  Circuit.cpp  Circuit.h  Complex.h  Gate.h  GateFactory.cpp  GateFactory.h  HadamardGate.cpp  HadamardGate.h  PauliX.cpp  PauliX.h  PauliXGate.cpp  PauliXGate.h  QubitRegister.cpp  QubitRegister.h  main.cpp
